src/objects/zqu__QuoteRatePlanCharge__c.object
<CustomObject>
    <fields>
        <fullName>IT_Cod_Cli_Dett__c</fullName>
        <label>Cod_Cli_Dett</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Ordered_Value__c</fullName>
        <label>Ordered Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Periods__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Periods (Years)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>